@@ -15,11 +15,36 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>19</maven.compiler.source>
+        <maven.compiler.target>19</maven.compiler.target>
 	</properties>
+	
+	<parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>3.0.0</version>
+    </parent>
 
 	<dependencies>
+	
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>io.micrometer</groupId>
+		    <artifactId>micrometer-spring-legacy</artifactId>
+		    <version>1.3.20</version>
+		</dependency>
+        <dependency>
+        	<groupId>org.springframework.boot</groupId>
+         	<artifactId>spring-boot-starter-test</artifactId>
+         	<scope>test</scope>
+      	</dependency>
 		<dependency>
 			<groupId>org.processing</groupId>
 			<artifactId>processing-complete</artifactId>
@@ -211,6 +236,23 @@
 			<!-- lock down plugins versions to avoid using Maven defaults (may be 
 				moved to parent pom) -->
 			<plugins>
+				<plugin>
+				  <groupId>org.apache.maven.plugins</groupId>
+				  <artifactId>maven-compiler-plugin</artifactId>
+				  <configuration>
+				    <source>19</source>
+				    <target>19</target>
+				    <compilerArgs>--enable-preview</compilerArgs>
+				  </configuration>
+				</plugin>
+				<plugin>
+	                <groupId>org.springframework.boot</groupId>
+    	            <artifactId>spring-boot-maven-plugin</artifactId>
+			    	<configuration>
+			        <fork>false</fork><!-- jvmArguments OR this, but not both -->
+			        <jvmArguments>--enable-preview</jvmArguments>
+			    </configuration>
+        	    </plugin>
 				<!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
 				<plugin>
 					<artifactId>maven-clean-plugin</artifactId>
